--- a/server/package.json
+++ b/server/package.json
@@ -8,7 +8,8 @@
   "dependencies": {
     "express": "*",
     "request": "*",
-    "ejs": "*"
+    "ejs": "*",
+    "mongodb": "*"
   },
   "devDependencies": {
     "mocha": "*",
