* Updated README.md * Added async as a dependency

--- a/server/package.json
+++ b/server/package.json
@@ -9,7 +9,8 @@
     "express": "*",
     "request": "*",
     "ejs": "*",
-    "mongodb": "*"
+    "mongodb": "*",
+    "async": "*"
   },
   "devDependencies": {
     "mocha": "*",
