Tables redesign * Redesigned tables * Increased Google API throttling (This is temporary while I find a more permenant fix for issue #14)

--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "mocha": "*",
     "expect.js": "*",
     "supertest": "*",
-    "mockery": "*"
+    "mockery": "*",
+    "karma": "*",
+    "karma-ie-launcher": "*",
+    "karma-mocha": "*"
   }
 }
