--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "grunt-contrib-htmlmin": "*",
     "grunt-contrib-cssmin": "*",
     "grunt-karma": "*",
-    "grunt-simple-mocha": "*"
+    "grunt-simple-mocha": "*",
+    "grunt-contrib-jshint": "~0.6.4",
+    "grunt-contrib-clean": "~0.5.0"
   }
 }
