Compression, caching, fix issue #14
* Added compression to static resources
* Added one year caching
* Failed Google Analytics calls get retried - Fixes #14

--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "grunt-contrib-clean": "*",
     "rewire": "*",
     "netmask": "*",
-    "shelljs": "*"
+    "shelljs": "*",
+    "grunt-install-dependencies": "*"
   },
   "devDependencies": {
     "mocha": "*",
