Fix metric movement calculation, add cache busting
* Fix the way metric movement is calculated
* Add browser cache busting to the build process

--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "rewire": "*",
     "netmask": "*",
     "shelljs": "*",
-    "grunt-install-dependencies": "*"
+    "grunt-install-dependencies": "*",
+    "grunt-contrib-watch": "*",
+    "grunt-rev": "*"
   },
   "devDependencies": {
     "mocha": "*",
