Specified grunt-forcemin as a dependency

--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "shelljs": "*",
     "grunt-install-dependencies": "*",
     "grunt-contrib-watch": "*",
-    "grunt-rev": "*"
+    "grunt-rev": "*",
+    "grunt-forcemin": "*"
   },
   "devDependencies": {
     "mocha": "*",
